--- a/app/src/main/res/menu/nav_drawer_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_menu.xml
@@ -23,9 +23,15 @@
             android:title="@string/deeplink" />
     </group>
     <!-- TODO STEP 9.8 - Add a menu item for settings_fragment -->
-    <!--<item-->
-        <!--android:id="@+id/settings_dest"-->
-        <!--android:icon="@drawable/ic_settings"-->
-        <!--android:title="@string/settings" />-->
+    <item
+        android:id="@+id/settings_dest"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/settings" />
     <!-- TODO END STEP 9.8 -->
+
+
+    <item
+        android:id="@+id/shopping_cart"
+        android:icon="@drawable/ic_shopping_cart_white"
+        android:title="@string/shopping" />
 </menu>
